(ISA-308) Fixed-width floating pills with ellipsized text on overflow

--- a/frontend/src/ui/css/state-of-knowledge.scss
+++ b/frontend/src/ui/css/state-of-knowledge.scss
@@ -67,7 +67,7 @@
 }
 
 .state-of-knowledge-pill-content {
-    width: 436px;
+    width: 100%;
 }
 
 /* Fixes bug that was preventing the use of react select fields (and probably other things) while a drawer was open */
